# complaint-rag-chatbot

./: .gitignore  README.md  notebooks
cfpb_rag_pipeline/: schedules.py
complaint_rag/: README.md  pyproject.toml  setup.cfg  setup.py
complaint_rag/complaint_rag/: definitions.py
src/: repository.py  task2_chunking_embedding.py
src/app.py/: app.py
src/cfpb_rag_pipeline/: ops.py
src/cfpb_rag_pipeline/cfpb_rag_pipeline/: jobs.py
src/complaint_rag_pipeline/jobs/: my_job.py
src/complaint_rag_pipeline/ops/: my_ops.py
src/src3/: task3_rag_pipeline.py
